--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^8.3.4",
